--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ntaobao",
+  "name": "ntoutiao",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
